2007-08-12   <> 

	* CBinding.addin.xml, ProjectPad/ProjectResourcesExtension.cs, Makefile.am:
	  Hide the resources node in the project pad for CProjects.

2007-08-12  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* CBinding.addin.xml: Added the paste command to the packages folder node's
	  context menu and the copy command to the package node's context menu.

2007-08-11  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Project/CProjectConfiguration.cs: Make paths relative to project folder.

2007-08-09  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/DataProvider.cs, Parser/Function.cs: Support for constant methods.
	* CBinding.addin.xml: Fixed addin-breaker-typo-from-hell.

2007-08-09  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* CBinding.addin.xml, CBinding.mdp: Some corrections.

2007-08-09   <> 

	* CBinding.addin.xml, CBinding.mdp, Makefile.am: Updated the paths and
	  embedded the .addin.xml into the assembly

2007-08-08  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/CTextEditorExtension.cs, Gui/DataProvider.cs,
	  Parser/ProjectInformation.cs, Parser/Function.cs,
	  Parser/TagDatabaseManager.cs: Parse and complete for included system
	  files too.

2007-08-07  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/OutputOptionsPanel.cs, Gui/AddLibraryDialog.cs,
	  Gui/EditPackagesDialog.cs, Gui/AddPathDialog.cs,
	  Gui/CodeGenerationPanel.cs, gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/CBinding.AddPathDialog.cs,
	  gtk-gui/CBinding.CodeGenerationPanel.cs,
	  gtk-gui/CBinding.OutputOptionsPanel.cs,
	  gtk-gui/CBinding.AddLibraryDialog.cs, gtk-gui/gui.stetic: Updated
	  widgets.

2007-08-07  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* CBinding.addin.xml, gtk-gui/CBinding.CodeGenerationPanel.cs: Removed
	  autotools support since it is currently very .NET specific.

2007-08-06  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* CBinding.addin.xml, CBinding.mdp, CBinding.mds,